import { CATALOG, defaultJob } from '../catalog';
import { defaultJob as defaultV1 } from '../versions/v1/catalog';
import { estimateJob as estimateV1 } from '../versions/v1/pricing';
import { estimateJob } from '../pricing';
import { composeCatalogProposal, normalizeCatalogProposal } from '../proposal';
import { catalogDocumentText } from '../document';
import { jobSchema } from '../schema';
const client = { client_name: 'Customer', client_email: 'test@example.com', contact_phone: '555-0100', service_location: 'Test home', facility_size: 1500, service_frequency: 'one-time' };
it.each(CATALOG.map(s => s.id))('prices %s on first load without access or customer details', id => {
  expect(estimateJob(defaultJob(id)).selectedPrice).toBeGreaterThan(0);
});
it.each(CATALOG.map(s => s.id))('customer copy and privacy snapshot: %s', id => {
  const p = composeCatalogProposal({ job: { ...defaultJob(id), access: 'lockbox 4821; alarm 998877; gate 9321' }, client });
  const text = catalogDocumentText(p.generated_content!);
  expect(text).not.toMatch(/4821|998877|9321|operator|suggested|Veltex|2\.167|\.\./i);
  expect(text).toContain('Your price:');
  expect(text).toMatchSnapshot();
});
it.each(['scheduling', 'operatorNotes', 'scopeAdditions', 'coverLetter'])('blocks entry details in %s', key => {
  expect(jobSchema.safeParse({ ...defaultJob(), [key]: 'Gate code 4821' }).success).toBe(false);
});
it('supports next-day and equal-clock turnover, vacant default and per-turn terms', () => {
  const job = defaultJob('airbnb_turnover');
  expect(job.occupancy).toBe('vacant');
  job.turnover = { ...job.turnover!, nextDay: true, checkin: '11:00' };
  const p = composeCatalogProposal({ job, client });
  expect(p.generated_content).toContain('next day');
  expect(p.generated_content).toContain('per turn');
  expect(p.generated_content).not.toMatch(/one-time/i);
  expect(p.generated_content).toContain('linen par: 2');
  job.turnover.nextDay = false;
  expect(jobSchema.safeParse(job).success).toBe(false);
});
it('bedrooms and bathrooms materially change a fixed-area quote', () => {
  const job = { ...defaultJob('standard'), bedrooms: 1, bathrooms: 1 };
  const base = estimateJob(job);
  expect(estimateJob({ ...job, bathrooms: 2 }).selectedPrice - base.selectedPrice).toBeGreaterThanOrEqual(20);
  expect(estimateJob({ ...job, bedrooms: 3 }).base.laborHours).toBeGreaterThan(base.base.laborHours);
});
it('rounds up to the chosen increment and headlines per-visit recurring price', () => {
  const job = defaultJob(); job.costs.roundingIncrement = 10;
  const p = composeCatalogProposal({ job, client });
  const e = estimateJob(job);
  expect(e.selectedPrice % 10).toBe(0);
  expect(p.pricing_data?.price_range?.high).toBe(e.selectedPrice);
  expect(p.generated_content).toContain('48 hours');
  expect(p.generated_content).not.toContain('No automatic renewal');
});
it('v1 pricing stays frozen after v2 registration; status-only edits preserve historical bytes', () => {
  const job = defaultV1('standard');
  expect(estimateJob(job)).toEqual(estimateV1(job));
  const original = composeCatalogProposal({ job, client });
  // Represents a persisted proposal generated by a different historical implementation.
  original.generated_content = 'Historical accepted text';
  original.pricing_data = { price_range: { low: 173.21, high: 173.21 } };
  const changed = normalizeCatalogProposal({ ...original, status: 'sent', generated_content: 'forged' }, original);
  expect(changed.generated_content).toBe('Historical accepted text');
  expect(changed.pricing_data).toEqual(original.pricing_data);
  expect(changed.status).toBe('sent');
  const edited = normalizeCatalogProposal({ ...original, service_specific_data: { ...original.service_specific_data, catalogJob: { ...job, bedrooms: 5 } } }, original);
  expect(edited.service_specific_data.estimateSnapshot).toEqual(estimateV1({ ...job, bedrooms: 5 }));
});
it('rejects version switching and sample saving', () => {
  const p = composeCatalogProposal({ job: defaultJob(), client });
  expect(() => normalizeCatalogProposal({ ...p, service_specific_data: { ...p.service_specific_data, catalogJob: { ...defaultV1(), access: '' } } }, p)).toThrow('version');
  expect(() => normalizeCatalogProposal(composeCatalogProposal({ job: { ...defaultJob(), demo: true }, client }))).toThrow('Sample');
});
it('warns about below-minimum overrides and long crew days', () => {
  const job = defaultJob('first_deep'); job.squareFeet = 10000;
  job.override = { pricePerVisit: 10, reason: 'Recorded internal rationale' };
  expect(estimateJob(job).warnings.join(' ')).toMatch(/eight hours.*minimum visit charge/);
});
it('malformed historical document blocks degrade without a crash', () => {
  expect(() => catalogDocumentText('```veliz_scope_table\n{oops}\n```')).not.toThrow();
  expect(() => catalogDocumentText('```veliz_pricing_table\nnull\n```')).not.toThrow();
});
it('initial clean has a separate deep-clean price before recurring visits', () => {
  const job = defaultJob();
  const p = composeCatalogProposal({ job, client });
  const initial = estimateJob({ ...job, jobType: 'first_deep', frequency: 'one-time', initialClean: false }).selectedPrice;
  expect(p.generated_content).toContain(`Initial detailed clean: $${initial.toFixed(2)}`);
  expect(initial).toBeGreaterThan(estimateJob(job).selectedPrice);
  expect(p.generated_content).toContain('replaces the first standard visit');
});
it('scope edits are controlled by the saved catalog and cannot forge the quote', () => {
  const job = defaultJob('standard');
  job.scopeOmissions = ['Empty ordinary household trash']; job.scopeAdditions = 'Wipe the breakfast table'; job.coverLetter = 'Thank you for inviting our team.';
  const p = composeCatalogProposal({ job, client });
  expect(p.generated_content).not.toContain('Empty ordinary household trash');
  expect(p.generated_content).toContain('Wipe the breakfast table');
  expect(p.generated_content).toContain('Thank you for inviting our team.');
  expect(p.pricing_data?.price_range?.high).toBe(estimateJob(defaultJob('standard')).selectedPrice);
  expect(() => composeCatalogProposal({ job: { ...job, scopeOmissions: ['Unknown catalog item'] }, client })).toThrow('catalog version');
});
